# BBO

docs/: index.md  overview.md  quickstart.ipynb
pkg/: pyproject.toml
pkg/src/bbo/: __init__.py  _approx_hull_ndim.py  approx_hull.py  hull.py  output.py  pca.py  typing.py  util.py
test/: pyproject.toml
test/src/bbo_testsuite/: __init__.py  __main__.py  hull__test.py  pca__test.py  util.py
test/src/bbo_testsuite/data/config/: coverage.toml  pytest.toml
