
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0"
name = "BBO-TestSuite"
requires-python = ">=3.10"
dependencies = [
    "pytest ==8.3.5",
    "pytest-cov ==6.0.0",
    "pytest-html ==4.1.1",
    "coverage ==7.6.12",
    "pkgdata",
]

[project.scripts]
test-bbo = "bbo_testsuite.__main__:main"
